# sure-research

./: README  README~  ScaledCar2ROS.xlsx
RC1/phil_catkin_ws/ServoControl1/: ServoControl1.ino
RC1/phil_catkin_ws/devel/: setup.sh
RC1/phil_catkin_ws/devel/include/rctestpkg/: ComputeControlResponse.h  IMUdata.h  MPC_ACCRequest.h  MPC_CCResponse.h  MPC_LKResponse.h
RC1/phil_catkin_ws/devel/include/rosserial_arduino/: Adc.h
RC1/phil_catkin_ws/devel/include/rosserial_mbed/: TestRequest.h
RC1/phil_catkin_ws/devel/include/rosserial_msgs/: RequestMessageInfoRequest.h  RequestParamRequest.h  RequestServiceInfoRequest.h  TopicInfo.h
RC1/phil_catkin_ws/devel/lib/pkgconfig/: rctestpkg.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_test.pc  rosserial_xbee.pc
RC1/phil_catkin_ws/devel/lib/rctestpkg/: ACC_MPC  CC_MPC  GetCarState  IMU  LK_MPC  Teleop  calculate_headway  central_controller  lane_publisher  lkdata  motor
RC1/phil_catkin_ws/devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
RC1/phil_catkin_ws/devel/share/rctestpkg/cmake/: rctestpkg-msg-paths.cmake  rctestpkgConfig.cmake
RC1/phil_catkin_ws/devel/share/rosserial_arduino/cmake/: rosserial_arduino-msg-extras.cmake  rosserial_arduino-msg-paths.cmake
RC1/phil_catkin_ws/devel/share/rosserial_embeddedlinux/cmake/: rosserial_embeddedlinuxConfig.cmake
RC1/phil_catkin_ws/install/: _setup_util.py  setup.sh
RC1/phil_catkin_ws/install/include/rosserial_msgs/: RequestServiceInfoResponse.h
RC1/phil_catkin_ws/install/lib/pkgconfig/: rosserial_arduino.pc  rosserial_mbed.pc  rosserial_python.pc  rosserial_tivac.pc
RC1/phil_catkin_ws/install/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
RC1/phil_catkin_ws/src/rctestpkg/: CMakeLists.txt
RC1/phil_catkin_ws/src/rctestpkg/msg/: CentralSignal.msg
RC1/phil_catkin_ws/src/rctestpkg/src/: ACC_MPC.cpp  GetCarState.cpp  Teleop.cpp  lkdata.cpp  motor.cpp
RC1/phil_catkin_ws/src/rctestpkg/src/Legacy Code/: central_controller.h  matrix_test.py  servoCommandTest.cpp
RC2/phil_catkin_ws/devel/include/rctestpkg/: CarState.h  CentralSignal.h  ComputeControl.h  MPC_CC.h  MPC_LK.h  MPC_LKRequest.h  Motor_data.h  MultTwoIntsResponse.h
RC2/phil_catkin_ws/devel/include/rosserial_mbed/: Adc.h
RC2/phil_catkin_ws/devel/lib/pkgconfig/: rosserial_arduino.pc  rosserial_python.pc  rosserial_server.pc
RC2/phil_catkin_ws/devel/lib/rctestpkg/: CC_MPC  GetCarState  Teleop  calculate_headway
RC2/phil_catkin_ws/install/: _setup_util.py
RC2/phil_catkin_ws/install/include/rctestpkg/: MultTwoInts.h  MultTwoIntsResponse.h  TestTalkerMsg.h
RC2/phil_catkin_ws/install/include/rosserial_msgs/: RequestMessageInfoResponse.h
RC2/phil_catkin_ws/install/lib/pkgconfig/: rosserial_windows.pc
RC2/phil_catkin_ws/install/lib/rosserial_server/: serial_node  socket_node
RC2/phil_catkin_ws/src/rctestpkg/: CMakeLists.txt  controllertest.launch
RC2/phil_catkin_ws/src/rctestpkg/msg/: Headway.msg  LKdata.msg  Motor_data.msg  TestTalkerMsg.msg
RC2/phil_catkin_ws/src/rctestpkg/src/: central_controller.cpp
phil_catkin_ws/devel/: .catkin  .rosinstall
phil_catkin_ws/devel/include/rctestpkg/: CarState.h  ComputeControlRequest.h  Headway.h  LKdata.h  MPC_ACC.h  MPC_ACCResponse.h  MPC_CCRequest.h  MultTwoIntsRequest.h  TestTalkerMsg.h  currentTime.h  funMessage.h
phil_catkin_ws/devel/include/rosserial_mbed/: TestResponse.h
phil_catkin_ws/devel/lib/pkgconfig/: rosserial_tivac.pc  rosserial_windows.pc
phil_catkin_ws/devel/lib/rctestpkg/: ACC_MPC  CC  CC_MPC  CC_controller  GetCarState  IMU  IMUtest  LK_MPC  MultTwoIntsClient  MultTwoIntsServer  Teleop  TestListener  TestTalker  animalAgeTalker  animalAgeTalker2  calculate_headway  central_controller  funListener  funTalker  lkdata  lktest  motor  motorCommand  motorTest  motorTestTalker  motorTestVelocityMode  mouseTest  servoCommand  servoCommandTest  timeListener  timeTalker
phil_catkin_ws/devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
phil_catkin_ws/devel/share/rctestpkg/cmake/: rctestpkg-msg-extras.cmake  rctestpkg-msg-paths.cmake
phil_catkin_ws/devel/share/rosserial_arduino/cmake/: rosserial_arduino-extras.cmake  rosserial_arduinoConfig.cmake
phil_catkin_ws/install/include/rctestpkg/: IMUdata.h  Motor_data.h  animalAge.h  currentTime.h
phil_catkin_ws/install/include/rosserial_arduino/: TestRequest.h  TestResponse.h
phil_catkin_ws/install/include/rosserial_msgs/: Log.h  RequestParamResponse.h
phil_catkin_ws/install/lib/pkgconfig/: rctestpkg.pc  rosserial_embeddedlinux.pc  rosserial_server.pc  rosserial_test.pc
phil_catkin_ws/install/lib/rosserial_server/: udp_socket_node
phil_catkin_ws/install/share/rctestpkg/cmake/: rctestpkg-msg-extras.cmake
phil_catkin_ws/install/share/rctestpkg/msg/: currentTime.msg
phil_catkin_ws/install/share/rosserial_server/cmake/: rosserial_serverConfig.cmake
phil_catkin_ws/src/rctestpkg/: CMakeLists.txt  CMakeLists.txt~  controllertest.launch  package.xml  package.xml~  setup.launch  setup.launch~  setup2.launch  setup2.launch~  teleopSetup.launch  teleopSetup.launch~
phil_catkin_ws/src/rctestpkg/msg/: CarState.msg  IMUdata.msg~  LKdata.msg  LKdata.msg~  TeleopControls.msg~
phil_catkin_ws/src/rctestpkg/src/: CC.cpp  CC.cpp~  CC_MPC.cpp  CC_controller.cpp  CC_controller.cpp~  CCtestClient  CCtestClient~  GetCarState.cpp  GetCarState.cpp~  IMU.cpp  IMU.cpp~  IMUtest.cpp  IMUtest.cpp~  LowPassFilter.h  MultTwoIntsClient.cpp  MultTwoIntsClient.cpp~  MultTwoIntsServer.cpp  MultTwoIntsServer.cpp~  Teleop.cpp  Teleop.cpp~  TestListener.cpp  TestTalker.cpp~  animalAgeTalker.cpp~  animalAgeTalker2.cpp~  calculate_headway.cpp  central_controller.cpp  central_controller.cpp~  central_controller.py~  filterTest  filterTest.cpp  filterTest.cpp~  funListener.cpp~  funTalker.cpp~  inputTest.cpp~  lkdata.cpp  lkdata.cpp~  lktest (old).cpp  lktest.cpp  lktest.cpp~  matrix_test.py~  (+20 more)
phil_catkin_ws/src/rctestpkg/src/Legacy Code/: motorCommand.cpp
(+127 files in other folders)
